* Change cruisecontrol.sh to check cc.pid and kill the start if the cc.pid is an active cruisecontrol instance that is already running (CC-1009). Patch by John Patrick.

build loop
======================
* Fix error in Builder.getBuildOutputConsumer() when live output is enabled and the project name contained a slash.

PipedExecBuilder
----------------------
* Fix memory usage and logging volume issues with PipedExecBuilder. (CC-991). Patch by Daniel Tihelka

Dashboard
======================
* Fix build error in Dashboard on MacOSX due to java.io.tempdir name when converted to URI. (CC-976)
* Add missing icon image for "unknown" modification type (CC-799). Reported by John Prause.

 contrib
======================

distributed
----------------------
* Add BuildAgent Host Name info into remote build results, similar to how CompositeBuilder inserts child builder info.

documentation
======================
* Include main javadocs in website, as they are referenced from project docs, eg: main/plugins.html. Reported by Pavel Krusina.


CruiseControl Release Notes - 2.8.4

general
======================
* Fix binaryrelease/cruisecontrol.sh startup script to convert JETTY_LOGS variable when run under cygwin (CC-983). Patch by Mark Bretl.
* build script cleanups.

build loop
======================
* Add a JMX operation to retrieve build logs (CC-908). Adapted from patch by Ivan "Rambius" Ivanov. Tested by Antoine Levy Lambert.
* Add FileResolver/ResolverUser to detect and re-read changed property files (CC-952). Patch by Daniel Tihelka. 
* BuildOutputLogger with multiple builds interfere with each other with multiple threads (CC-911). Patch by Grzegorz Olędzki. 
  Additional changes to support 'liveOutput' (visible in Dashboard) and 'showProgress' (visible in JSP) from all builders. See CC-911 for details.
* Add a JMX operation that passes additional properties to a build (CC-909). Based on Patch by Ivan "Rambius" Ivanov and Antoine Levy Lambert.